Fixing styles on mobile

--- a/src/scss/partials/_hack.scss
+++ b/src/scss/partials/_hack.scss
@@ -66,3 +66,9 @@
         }
     }
 }
+
+@include bp(small) {
+    .browser-name {
+        display: none;
+    }
+}
